--- a/slip.css
+++ b/slip.css
@@ -1,31 +1,34 @@
-h3 {color: blue;
+body {
+ font-family: "Gill Sans Pro", Arial, sans-serif;
+}
+
+h3 {
+
 }
 
 h4 {
-}
-
-p {
-}
-
-hr {
-}
-
-.newsitem {
+  
 }
 
 h5 {
-margin-bottom: 1px; 
-margin-top: 1px;
+  margin-bottom: 1px; 
+  margin-top: 1px;
 }
 
 p {
-margin-bottom: 1px; 
-margin-top: 1px;
+  margin-bottom: 1px; 
+  margin-top: 1px;
 }
 
 p.newsfooter {
-font-size: 8pt;
-font-style:italic;
-margin-bottom: 1px;
-margin-top: 1px;
+  font-size: 8pt;
+  font-style:italic;
+}
+
+hr {
+  
+}
+
+.newsitem {
+  
 }
