Update and rename slip.css to slippy.css

--- a/slippy.css
+++ b/slippy.css
@@ -1,5 +1,5 @@
 body {
- font-family: "Gill Sans Pro", Arial, sans-serif;
+ font-family: "Gill Sans Std", Arial, sans-serif;
 }
 
 h3 {
@@ -7,7 +7,7 @@ h3 {
 }
 
 h4 {
-  font-family: "Gill Sans Pro", Arial, sans-serif;
+  font-family: "Gill Sans Std", Arial, sans-serif;
 }
 
 h5 {
