--- a/slip.css
+++ b/slip.css
@@ -7,7 +7,9 @@ h3 {
 }
 
 h4 {
-  font-family: "Gill Sans Std", Arial, sans-serif;
+ text-align:center; 
+ font-style:italic;
+ font-family:"Gill Sans Std", Arial, sans-serif;
 }
 
 h5 {
