--- a/slip.css
+++ b/slip.css
@@ -1,14 +1,10 @@
-body {
- font-family:"Gill Sans Std", Arial, sans-serif;
-}
-
 h3 {
 
 }
 
 h4 {
  text-align:center;
- font-family:"Gill Sans Std", Arial, sans-serif;
+ font-family:Arial, sans-serif;
 }
 
 h5 {
@@ -19,7 +15,7 @@ h5 {
 p {
   margin-bottom: 1px; 
   margin-top: 1px;
-  font-family:"Gill Sans Std", Arial, sans-serif;
+  font-family:Arial, sans-serif;
 }
 
 p.newsfooter {
