--- a/slip.css
+++ b/slip.css
@@ -1,21 +1,37 @@
-h3 {
-
+h3 { 
+    display: block;
+    font-size: 1.17em;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;
 }
 
 h4 {
- text-align:center;
- font-family:Arial, sans-serif;
+    display: block;
+    font-size: 1em;
+    margin-top: 1.33em;
+    margin-bottom: 1.33em;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;
+    text-align:center;
 }
 
-h5 {
-  margin-bottom: 1px; 
-  margin-top: 1px;
+h5 { 
+    display: block;
+    font-size: .83em;
+    margin-bottom: 1px; 
+    margin-top: 1px;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;
 }
 
 p {
   margin-bottom: 1px; 
   margin-top: 1px;
-  font-family:Arial, sans-serif;
 }
 
 p.newsfooter {
