--- a/slip.css
+++ b/slip.css
@@ -19,17 +19,8 @@ h4 {
     text-align:center;
 }
 
-h5 { 
-    display: block;
-    font-size: .83em;
-    margin-bottom: 1px; 
-    margin-top: 1px;
-    margin-left: 0;
-    margin-right: 0;
-    font-weight: bold;
-}
-
 p {
+  font-size: 1.17em;
   margin-bottom: 1px; 
   margin-top: 1px;
 }
