--- a/main.css
+++ b/main.css
@@ -648,13 +648,11 @@ a[href*="suggestion"] {
 /* Edition */
 .results_summary.edition,
 .results_summary.rda264,
-.results_summary.language {
-    display: none;
-}
-
-/* Publisher info */
+.results_summary.languages,
 .results_summary.publisher,
-.results_summary.publisher_number {
+.results_summary.publisher_number,
+.results_summary.online_resources,
+.hint {
     display: none;
 }
 
