--- a/main.css
+++ b/main.css
@@ -6,6 +6,12 @@
 /* === FONTS (match main site) === */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap");
 
+/* Override Bootstrap defaults */
+:root {
+    --bs-body-font-family: "Poppins", sans-serif;
+    --bs-table-striped-bg: #f8f8f8;
+}
+
 /* === LOGO === */
 #logo {
     background: transparent
@@ -77,7 +83,7 @@ body::before {
 
 /* === TYPOGRAPHY (match main site) === */
 body {
-    font-family: "Poppins", sans-serif;
+    font-family: "Poppins", sans-serif !important;
     font-size: 15px;
     line-height: 1.9;
     color: #5c5c77;
@@ -89,7 +95,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Montserrat", sans-serif;
+    font-family: "Montserrat", sans-serif !important;
     font-weight: 700;
     color: #094074;
 }
