--- a/main.css
+++ b/main.css
@@ -146,6 +146,7 @@ h4 {
     font-weight: 500;
     text-transform: capitalize;
     transition: all 0.3s ease;
+    color: #e1e7f1;
 }
 
 #searchsubmit:hover,
