--- a/main.css
+++ b/main.css
@@ -174,6 +174,15 @@ a:visited {
     margin: 1rem 0;
 }
 
+/* Uniform height for search bar elements */
+#masthead_search,
+.mastheadsearch .form-control,
+.mastheadsearch .form-select,
+#searchsubmit {
+    height: 42.5px !important;
+    box-sizing: border-box;
+}
+
 #searchsubmit,
 .btn-primary {
     background: #ad343e !important;
